source/main.css
.container {
  /*
    If you have a block-level element of a certain width, margin: 0 auto;
    will how you center it inside its parent container.

    See: http://bluerobot.com/web/css/center1.html
  */
  margin: 0 auto;
  width: 600px;
}

.content {
  width: 599px;
  border: 1px solid grey;
  border-left: none;
}

.footer {
  padding: 20px 0;
}


ul {
  padding: 19px 0;
  border-top: 1px solid grey;
  border-bottom: 1px solid grey
}

li {
  display: inline-block;
}

p {
  padding-right: 20px;
}

